django setup complete

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <h2>This is H2</h2>
     <p>This is H3</p>
     <py-script></py-script>
+    <py-script src="C:\Users\Raman\OneDrive\Desktop\Code\chatapp-baingan\main.py"></py-script>
+    <py-repl></py-repl>
 </body>
 </html>
+ 
+
